fix header z-index

--- a/assignments/styles.css
+++ b/assignments/styles.css
@@ -22,6 +22,7 @@ header {
   left: 0;
   right: 0;
   background-color: rgba(0, 0, 0, .8);
+  z-index: 9999;
 }
 
 nav {
